@@ -4,7 +4,7 @@
 \alias{getRolloff}
 \title{Control rolloff of harmonics}
 \usage{
-getRolloff(pitch_per_gc = c(440), nHarmonics = 100, rolloff = -6,
+getRolloff(pitch_per_gc = c(440), nHarmonics = NULL, rolloff = -6,
   rolloffOct = 0, rolloffParab = 0, rolloffParabHarm = 3,
   rolloffParabCeiling = NULL, rolloffKHz = 0, baseline = 200,
   dynamicRange = 80, samplingRate = 16000, plot = FALSE)
