@@ -1,5 +1,6 @@
           CHANGES IN SOUNDGEN VERSION 1.3.2 [...Date...]
 MINOR:
+  * soundgen(): new argument "rolloffExact" for controlling the strength of each individual harmonic in source spectrum
   * analyze(), analyzeFolder(), segment(), segmentFolder(), spectrogram(), spectrogramFolder(): support for mp3 files in addition to wav
   * analyze(): pitch candidates based on lowest dominant frequency band ("dom") respect pitchCeiling
 
